# xleapmouse

./: .gitignore  CMakeLists.txt  README.md  config.h  config.sh  configure.ac  gen-functions
src/: CMakeLists.txt  Makefile.am  MouseListener.cpp  config.cpp  trivconfig.cpp  ui_none.cpp  ui_qt.cpp  ui_qt_slots.cpp  util.cpp  xleapmouse.cpp
src/include/: Makefile.am  trivconfig.h  xleapmouse.h  xlmgui.h
src/res/: xleapmouse.xcf  xlm.qrc  xlm.ui  xsleepmouse.xcf
